--- a/app/views/productos.html
+++ b/app/views/productos.html
@@ -1,8 +1,56 @@
-<div class="row">
-  <div class="span6">
-       1
-  </div>
-  <div class="span6">
-        2
-  </div>
-</div>
+<form name="frmProducto" ng-submit="guardarProducto()" class="form-horizontal" action='' method="POST">
+  <fieldset>
+    <div id="legend">
+      <legend class="">Productos</legend>
+    </div>
+    <div class="control-group">
+      <!-- Nombre -->
+      <label class="control-label"  for="nombre">Nombre</label>
+      <div class="controls">
+        <input ng-model="producto.nombre" type="text" id="nombre" name="nombre" placeholder="" class="input-xlarge" required />
+        <p class="text-error" ng-show="frmProducto.nombre.$error.required">Nombre es requerido</p>
+      </div>
+    </div>
+    <div class="control-group">
+      <!-- Descripcion -->
+      <label class="control-label"  for="descripcion">Descripcion</label>
+      <div class="controls">
+        <input ng-model="producto.descripcion" type="text" id="descripcion" name="descripcion" placeholder="" class="input-xlarge" required />
+        <p class="text-error" ng-show="frmProducto.descripcion.$error.required">Descripcion es requerido</p>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <!-- Precio -->
+      <label class="control-label" for="precio">Precio</label>
+      <div class="controls">
+        <input type="number" ng-model="producto.precio" min="1" max="999999" id="precio" name="precio" placeholder="Precio" class="input-xlarge" required />
+        <p class="text-error" ng-show="frmProducto.precio.$error.required">Precio es requerido</p>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <!-- Cantidad en Estante -->
+      <label class="control-label" for="cantidadEstante">Cantidad en Estante</label>
+      <div class="controls">
+        <input type="number" ng-model="producto.cantidadEstante" min="1" max="999999" id="cantidadEstante" name="cantidadEstante" placeholder="Cantidad Estante" class="input-xlarge" required />
+        <p class="text-error" ng-show="frmProducto.cantidadEstante.$error.required">Cantidad Estante es requerido</p>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <!-- Cantidad en Inventario -->
+      <label class="control-label" for="cantidadInventario">Cantidad en Inventario</label>
+      <div class="controls">
+        <input type="number" ng-model="producto.cantidadInventario" min="1" max="999999" id="cantidadInventario" name="cantidadInventario" placeholder="Cantidad Inventario" class="input-xlarge" required />
+        <p class="text-error" ng-show="frmProducto.cantidadInventario.$error.required">Cantidad Inventario es requerido</p>
+      </div>
+    </div>
+    <div class="control-group">
+      <div class="controls">
+        <input type="submit" class="btn btn-primary" value="Guardar Producto" />
+        <p class="text-success" ng-show="productoGuardado">El Producto se ha guardado satisfactoriamente.</p>
+      </div>
+    </div>
+  </fieldset>
+</form>
