--- a/app/views/shoppingCart.html
+++ b/app/views/shoppingCart.html
@@ -1,63 +1,73 @@
-<div class="container">
-  <ul class="icons-nav">
-    <li>
+
+<h1>Super Zapato</h1>
+<ul class="icons-nav">
+  <li>
+    <ul class="cart">
+      <li class="icon products-icon"></li>
+      <li class="ammount products-ammount">{{items.length;}}</li>
+    </ul>
+  </li>
+  <li class="search_form ">
+    <form id="custom-search-form" class="form-search form-horizontal ">
+        <div class="input-append ">
+            <input type="text" class="search-query" placeholder="Search">
+            <button type="submit" class="btn"><i class="icon-search"></i></button>
+        </div>
+    </form>
+  </li>
+</ul>
+  
+<ul id="thumbnails centered-text">
+  <li ng-repeat='item in items' class="span3">
+    <div class="thumbnail" style="padding: 0">
+      <div style="padding:4px">
+        <img alt="300x200" style="width: 100%" src="http://placehold.it/200x150">
+      </div>
+      <div class="caption">
+        <h2>{{item.title}}</h2>
+        <h3>{{item.price * item.quantity | currency}}</h3>
+        <p>My item description</p>
+        
+      </div>
+      <div class="modal-footer" style="text-align: left">
+        <a href="http://bootsnipp.com/" class="btn btn-primary" ng-click="addToCart(item)">Add to Cart</a>
+      </div>
+    </div>
+  </li>
+</ul>
+
+
+ <!-- <div class="mycart">
+  <ul class="icons-nav border-bottom">
+    <li><h2>My Cart</h2></li>
+    <li class="pull-right">
       <ul class="cart">
-        <li class="icon products-icon"></li>
-        <li class="ammount products-ammount">{{items.length;}}</li>
+        <li class="icon cart-icon"></li>
+        <li class="ammount cart-ammount">{{cart_items.length;}}</li>
       </ul>
     </li>
   </ul>
-  <div class="clr">
-    <ul id="product-list">
-      <li ng-repeat='item in items'>
-        <ul class="in-line">
-          <li>
-            <a ng-click="addToCart(item)">{{item.title}}</a></li>
-          <li>
-            <input ng-model='item.quantity' type="number">
-          </li>
-          <li>
-            <span>{{item.price | currency}}</span>
-          </li>
-          <li>
-            <span>{{item.price * item.quantity | currency}}</span>
-          </li>
-          <li class="remove"><button ng-click="remove($index)" class="button btn-delete"></button></li>
-        </ul>
-      </li>
-    </ul>
+  <ul id="cart-list">
+    <li ng-repeat='cart_item in cart_items'>
+      <ul class="in-line">
+        <li class="pd_cart_name">
+          <button ng-click="removeFromCart($index)" class="button btn-delete"></button>
+          <span>{{cart_item.title}}</span></li>
+        <li class="pd_cart_qty">
+          {{cart_item.quantity}}
+        </li>
+        <li>
+          <span>{{cart_item.price | currency}}</span>
+        </li>
+        <li>
+          <span>{{cart_item.price * cart_item.quantity | currency}}</span>
 
-  </div>
+        </li>
+      </ul>
+    </li>
+  </ul>
+  <h3>Total: <span class="orange">{{cartTotal() | currency}}</span></h3>
+</div>  -->
 
-  <div class="mycart">
-    <ul class="icons-nav border-bottom">
-      <li><h2>My Cart</h2></li>
-      <li class="pull-right">
-        <ul class="cart">
-          <li class="icon cart-icon"></li>
-          <li class="ammount cart-ammount">{{cart_items.length;}}</li>
-        </ul>
-      </li>
-    </ul>
-    <ul id="cart-list">
-      <li ng-repeat='cart_item in cart_items'>
-        <ul class="in-line">
-          <li class="pd_cart_name">
-            <button ng-click="removeFromCart($index)" class="button btn-delete"></button>
-            <span>{{cart_item.title}}</span></li>
-          <li class="pd_cart_qty">
-            {{cart_item.quantity}}
-          </li>
-          <li>
-            <span>{{cart_item.price | currency}}</span>
-          </li>
-          <li>
-            <span>{{cart_item.price * cart_item.quantity | currency}}</span>
 
-          </li>
-        </ul>
-      </li>
-    </ul>
-    <h3>Total: <span class="orange">{{cartTotal() | currency}}</span></h3>
-  </div>
-</div>
+
