integracion de productos al layout

--- a/app/views/shoppingCart.html
+++ b/app/views/shoppingCart.html
@@ -24,9 +24,9 @@
         <img alt="300x200" style="width: 100%" src="http://placehold.it/200x150">
       </div>
       <div class="caption">
-        <h2>{{item.title}}</h2>
-        <h3>{{item.price * item.quantity | currency}}</h3>
-        <p>My item description</p>
+        <h2>{{item.nombre}}</h2>
+        <h3>{{item.precio | currency}}</h3>
+        <p>{{item.descripcion}}</p>
         
       </div>
       <div class="modal-footer" style="text-align: left">
