--- a/app/styles/_utils.scss
+++ b/app/styles/_utils.scss
@@ -9,6 +9,33 @@
 }
 
 .modal-footer .btn {width: 88%;}
-.thumbnail{margin-bottom: 20px;}
+.thumbnail{
+	margin-bottom: 20px;
+	h2 {
+	    margin: 0 0 5px;
+	    font-size: 22px;
+	    color: lightseagreen;
+	    text-transform: capitalize;
+	}
+	h3 {
+	    margin: 0 0 5px;
+	    font-size: 16px;
+	    color: lightcoral;
+	}
+	h2, h3 { line-height: 1;}
+	p{
+		margin: 10px 0 0 ;
+		font-size: 12px;
+		line-height: 1.2;
+		text-align: justify;
+		> :first-child{
+			text-transform: capitalize;
+		}
+	}
+	.caption{
+		min-height: 120px;
+		height: auto;
+	}
+}
 
 .centered-text{text-align: center;}
