product display img

--- a/app/views/shoppingCart.html
+++ b/app/views/shoppingCart.html
@@ -21,7 +21,7 @@
   <li ng-repeat='item in items | filter:searchText' class="span3">
     <div class="thumbnail" style="padding: 0">
       <div style="padding:4px">
-        <a href="javascript:void" ng-click="openModalEliminarRopa(ropa)"> <img alt="300x200" style="width: 100%" src="http://placehold.it/200x150"></a>
+        <a href="javascript:void" ng-click="openModalEliminarRopa(ropa)"> <img alt="300x200" style="width: 100%" src={{item.imagenPrincipal}}></a>
       </div>
       <div class="caption">
         <h2>{{item.nombre}}</h2>
