--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,8 @@
 <div class="hero-unit">
-  <h1>'Allo, 'Allo!</h1>
-  <p>You now have</p>
+  <h1>'Allo!</h1>
+  <p>D&#243;nde vamos?</p>
   <ul>
-      <li ng-repeat="thing in awesomeThings">{{thing}}</li>
+      <li ng-repeat="url in urls"><a href="#{{url}}">{{ url }}</a></li>
   </ul>
-  <p>installed.</p>
   <h3>Enjoy coding! - Yeoman</h3>
 </div>
