--- a/app/views/shoppingCart.html
+++ b/app/views/shoppingCart.html
@@ -20,11 +20,11 @@
     </form>
   </div>
   <div class="row">
-     <div class="mycart pull-right span4">
+     <div class="mycart pull-right span2">
       <ul class="icons-nav">
-        <li><h2>Mi Carrito</h2></li>
+        <li><a href="javascript:void(0)" ng-click="openModalVerCarrito()"><h2>[ver carrito]</h2><a/></li>
         <li class="pull-right">
-          <a href="javascritp:void(0)">
+          <a href="javascript:void(0)" ng-click="openModalVerCarrito()">
             <ul class="cart">
               <li class="icon cart-icon"></li>
               <li class="ammount cart-ammount">{{cart_items.length;}}</li>
@@ -32,29 +32,6 @@
           </a>
         </li>
       </ul>
-      <div class="border-top hidden">
-        <ul id="cart-list border-top">
-          <li ng-repeat='cart_item in cart_items'>
-            <ul class="in-line">
-              <li class="pd_cart_name">
-                <button ng-click="removeFromCart($index)" class="button btn-delete"></button>
-                <span>{{cart_item.title}}</span></li>
-              <li class="pd_cart_qty">
-                {{cart_item.quantity}}
-              </li>
-              <li>
-                <span>{{cart_item.price | currency}}</span>
-              </li>
-              <li>
-                <span>{{cart_item.price * cart_item.quantity | currency}}</span>
-
-              </li>
-            </ul>
-          </li>
-        </ul>
-        <h3 class="border-top">Total: <span class="orange">{{cartTotal() | currency}}</span></h3>
-      </div>
-    </div>
   </div>
 
 </div>
@@ -63,41 +40,72 @@
     <li ng-repeat='item in items | filter:searchText' class="span3">
       <div class="thumbnail" style="padding: 0">
         <div style="padding:4px">
-          <a href="javascript:void(0)" ng-click="openModalEliminarRopa(ropa)"> <img alt="300x200" style="width: 100%" src={{item.imagenPrincipal}}></a>
+          <a href="javascript:void(0)" ng-click="openModalVerProducto(item)"> <img alt="300x200" style="width: 100%" src={{item.imagenPrincipal}}></a>
         </div>
         <div class="caption">
           <h2>{{item.nombre}}</h2>
           <h3>{{item.precio | currency}}</h3>
+          <a href="javascript:void(0)" class="small" ng-click="openModalVerProducto(item)">[+] ver detalles</a>
           <p>{{item.descripcion}}</p>
+          <input ng-model='item.quantity' type="number" placeholder="1">
 
         </div>
         <div class="modal-footer" style="text-align: left">
           <button class="btn btn-primary" ng-click="addToCart(item)">Agregar al Carrito</button>
-          <button class="btn btn-primary" ng-click="openModalVerProducto(item)">Ver Informacion</button>
         </div>
       </div>
     </li>
   </ul>
 </div>
+
 <div modal="modalVerProducto" close="closeModalVerProducto()" options="modalOpts">
   <div class="modal-header">
-    <h4>Informacion del Producto</h4>
+    <h4>{{ verProducto.nombre }}</h4>
+    <div> <strong>Estante:</strong> {{ verProducto.cantidadEstante}}</div>
+    <div> <strong>Disponibles:</strong> {{ verProducto.cantidadInventario }}</div>
   </div>
   <div class="modal-body">
-    <div>Nombre: {{ verProducto.nombre }}</div>
-    <div>Precio: {{ verProducto.precio | currency }}</div>
-    <div>Descripcion: {{ verProducto.descripcion }}</div>
-    <div>Cantidad Inventario: {{ verProducto.cantidadInventario }}</div>
-    <div>Cantidad Estante: {{ verProducto.cantidadEstante}}</div>
-
-
     <carousel interval="slideInterval">
       <slide ng-repeat="slide in verProducto.imagenesSlide">
         <img ng-src="{{slide.path}}" style="margin:auto;">
       </slide>
     </carousel>
+    <div> <strong>Precio:</strong> {{ verProducto.precio | currency }}</div>
+    <div> <strong>Descripci&#243;n:</strong> {{ verProducto.descripcion }}</div>
   </div>
   <div class="modal-footer">
     <button class="btn btn-warning cancel" ng-click="closeModalVerProducto()">Cerrar</button>
+  </div>
+</div>
+
+<div modal="modalVerCarrito" close="closeModalVerCarrito()" options="modalOpts">
+  <div class="modal-header">
+    <h4>Mis Compras</h4>
+  </div>
+  <div class="modal-body">
+    <div class="border-top my-cart">
+      <ul id="cart-list border-top">
+        <li ng-repeat='cart_item in cart_items'>
+          <ul class="in-line">
+            <li class="pd_cart_name">
+              <button ng-click="removeFromCart($index)" class="button btn-delete"></button>
+              <span>{{cart_item.title}}</span></li>
+            <li class="pd_cart_qty">
+              {{cart_item.quantity}}
+            </li>
+            <li>
+              <span>{{cart_item.price | currency}}</span>
+            </li>
+            <li class="pd_cart_price">
+              <span>{{cart_item.price * cart_item.quantity | currency}}</span>
+            </li>
+          </ul>
+        </li>
+      </ul>
+      <h3 class="border-top">Total: <span class="orange">{{cartTotal() | currency}}</span></h3>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button class="btn btn-warning cancel" ng-click="closeModalVerCarrito()">Cerrar</button>
   </div>
 </div>
