--- a/app/styles/_mycart.scss
+++ b/app/styles/_mycart.scss
@@ -8,7 +8,7 @@
     padding: 0 20px;
     margin:0 0 20px;
     h2{
-    	font-size: 18px;
+    	font-size: 15px;
     	line-height: 1;
 		margin: 10px 0;
     }
@@ -16,6 +16,10 @@
     	font-size: 16px;
     	margin: 0;
     }
+}
+
+.my-cart {
+    h3{font-size: 16px;}
 }
 
 #cart-list {
@@ -51,5 +55,27 @@
     color: orange;
     font-size: 16px;
     font-weight: bold;
+    float: right;
+}
+a.small{
+	font-size: 10px;
+	text-transform: uppercase;
+}
+
+.pd_cart_name {
+	min-width: 200px;
+}
+
+.pd_cart_qty {
+    width: 40px !important;
+    margin-right: 30px;
+}
+
+.pd_cart_price {
+    text-align: right;
+    float: right;
+}
+
+.pull-right {
     float: right;
 }
