--- a/app/views/shoppingCart.html
+++ b/app/views/shoppingCart.html
@@ -1,5 +1,5 @@
-<div class="row" ng-show="!productosCargados">
-  Cargando...
+<div class="row pagination-centered" ng-show="!productosCargados">
+  <img src="https://d3uosoqzln3f54.cloudfront.net/skin/frontend/frankoak/default/images/loader.gif" alt="">
 </div>
 <div class="row" ng-show="productosCargados">
   <div class="span4">
